2006-06-07  Andreas Tobler  <a.tobler@schweiz.ch>

	* native/jawt/Makefile.am (AM_LDFLAGS): Add XTEST_LIBS.

2006-06-07  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicTreeUI.java
	(completeUIUninstall): Implemented.
	(uninstallUI): Moved some bits to completeUIUninstall(). Complete
	editing before uninstalling anything.
	(isToggleEvent): Implemented.
	(selectPathForEvent): Make use of isToggleEvent().
	(ComponentHandler.componentMoved): Implemented.
	(ComponentHandler.startTimer): Implemented.
	(ComponentHandler.getScrollPane): Implemented.
	(ComponentHandler.actionPerformed): Implemented.

2006-06-07  Francis Kung  <fkung@redhat.com>

	* javax/swing/JMenuBar.java:
	(getSubElements): Do not return null values.

2006-06-07  Roman Kennke  <kennke@aicas.com>

	PR 27902
	* gnu/regexp/BacktrackStack.java
	* gnu/regexp/CharIndexed.java
	* gnu/regexp/CharIndexedCharArray.java
	* gnu/regexp/CharIndexedCharSequence.java
	* gnu/regexp/CharIndexedInputStream.java
	* gnu/regexp/CharIndexedString.java
	* gnu/regexp/CharIndexedStringBuffer.java
	* gnu/regexp/RE.java
	* gnu/regexp/REException.java
	* gnu/regexp/REFilterInputStream.java
	* gnu/regexp/REMatch.java
	* gnu/regexp/REMatchEnumeration.java
	* gnu/regexp/RESyntax.java
	* gnu/regexp/REToken.java
	* gnu/regexp/RETokenAny.java
	* gnu/regexp/RETokenBackRef.java
	* gnu/regexp/RETokenChar.java
	* gnu/regexp/RETokenEnd.java
	* gnu/regexp/RETokenEndOfPreviousMatch.java
	* gnu/regexp/RETokenEndSub.java
	* gnu/regexp/RETokenIndependent.java
	* gnu/regexp/RETokenLookAhead.java
	* gnu/regexp/RETokenLookBehind.java
	* gnu/regexp/RETokenNamedProperty.java
	* gnu/regexp/RETokenOneOf.java
	* gnu/regexp/RETokenPOSIX.java
	* gnu/regexp/RETokenRange.java
	* gnu/regexp/RETokenRepeated.java
	* gnu/regexp/RETokenStart.java
	* gnu/regexp/RETokenWordBoundary.java
	* gnu/regexp/UncheckedRE.java
	* gnu/java/util/regex/BacktrackStack.java
	* gnu/java/util/regex/CharIndexed.java
	* gnu/java/util/regex/CharIndexedCharArray.java