@@ -1,3 +1,12 @@
+2006-06-07  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* java/util/InputMismatchException.java:
+	Documented.
+
+2005-04-20  Tom Tromey  <tromey@redhat.com>
+
+	* java/util/InputMismatchException.java: New file.
+	
 2006-06-07  Andreas Tobler  <a.tobler@schweiz.ch>
 
 	* native/jawt/Makefile.am (AM_LDFLAGS): Add XTEST_LIBS.
